<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="274dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/leftBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="getPreviousPhoto"
        android:text="Left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/snapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="takePicture"
        android:text="Snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBtn"
        app:layout_constraintStart_toEndOf="@+id/leftBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:onClick="getNextPhoto"
        android:text="Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendSearch"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText"
        app:layout_constraintVertical_bias="0.695" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/caption"
        android:ems="10"
        android:hint="@string/caption"
        android:inputType="textShortMessage"
        android:text="Caption"
        app:layout_constraintBottom_toTopOf="@+id/snapBtn"
        app:layout_constraintEnd_toStartOf="@+id/captionBtn"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/captionText"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/captionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:onClick="captionBtnClick"
        android:text="Caption"
        app:layout_constraintBottom_toTopOf="@+id/rightBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="sharePhoto"
        android:text="Share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText"
        app:layout_constraintVertical_bias="0.725" />

    <TextView
        android:id="@+id/lngView"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:maxLength="7"
        android:text="Long"
        app:layout_constraintBottom_toTopOf="@+id/captionText"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/latView"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:maxLength="7"
        android:text="Lat"
        app:layout_constraintBottom_toTopOf="@+id/captionText"
        app:layout_constraintEnd_toStartOf="@+id/lngView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>